# swagger.json
@@ -9,6 +9,10 @@
     {
       "url": "http://localhost:1200/event-ticketing/api/v1",
       "description": "Local server"
+    },
+    {
+      "url": "https://eventticketing-backend.onrender.com/event-ticketing/api/v1",
+      "description": "Production server"
     }
   ],
   "paths": {
@@ -45,7 +49,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Login"
+                "$ref": "#/components/schemas/LoginRequest"
               }
             }
           }
@@ -153,6 +157,18 @@
         }
       }
     },
+    "/event": {
+      "get": {
+        "summary": "Get all event details",
+        "tags": ["Event"],
+        "security": [{ "jwtAuth": [] }],
+        "responses": {
+          "200": {
+            "description": "Event details retrieved successfully"
+          }
+        }
+      }
+    },
     "/event/{id}": {
       "get": {
         "summary": "Get event details",
@@ -249,6 +265,7 @@
             "name": "filter",
             "in": "query",
             "required": false,
+            "description": "Find booking use these:user_id ,event_id ,booking_date",
             "schema": {
               "type": "object"
             }
@@ -345,55 +362,167 @@
         "description": "JWT Token used for authentication"
       }
     },
+
     "schemas": {
       "User": {
         "type": "object",
         "properties": {
-          "type": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
+          "id": {
+            "type": "string",
+            "description": "Unique identifier for the user"
           },
           "email": {
-            "type": "string"
+            "type": "string",
+            "description": "Email of the user"
           },
           "password": {
-            "type": "string"
-          },
-          "address": {
-            "type": "string"
+            "type": "string",
+            "description": "Password for the user"
           },
           "metadata": {
-            "type": "object"
+            "type": "object",
+            "description": "Additional metadata for the user",
+            "example": {
+              "age": 25,
+              "preferences": {
+                "notifications": true
+              }
+            }
           }
-        }
-      },
-      "Login": {
-        "type": "object",
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
-        }
-      },
-      "UserUpdate": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "newFields": {
-            "type": "object"
-          }
-        }
+        },
+        "required": ["email", "password"]
       },
       "Event": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "Unique identifier for the event"
+          },
+          "name": {
+            "type": "string",
+            "description": "Name of the event"
+          },
+          "date": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Date and time of the event"
+          },
+          "location": {
+            "type": "string",
+            "description": "Location of the event"
+          },
+          "metadata": {
+            "type": "object",
+            "description": "Additional metadata for the event",
+            "example": {
+              "organizer": "John Doe",
+              "capacity": 200
+            }
+          }
+        },
+        "required": ["name", "date", "location"]
+      },
+      "Booking": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "Unique identifier for the booking"
+          },
+          "userId": {
+            "type": "string",
+            "description": "ID of the user who made the booking"
+          },
+          "eventId": {
+            "type": "string",
+            "description": "ID of the event being booked"
+          },
+          "metadata": {
+            "type": "object",
+            "description": "Additional metadata for the booking",
+            "example": {
+              "seatNumber": "A12",
+              "paymentStatus": "Paid"
+            }
+          }
+        },
+        "required": ["userId", "eventId"]
+      },
+      "Ticket": {
+        "type": "object",
+        "properties": {
+          "eventId": {
+            "type": "string",
+            "description": "ID of the event associated with this ticket"
+          },
+          "userName": {
+            "type": "string",
+            "description": "Name of the  user who owns the ticket"
+          },
+          "eventName": {
+            "type": "string",
+            "description": "Name of the event from getEvent"
+          },
+          "Date": {
+            "type": "string",
+            "description": "Date when event is occurring (2020-12-3 00:00:00)"
+          }
+        },
+        "required": ["eventName", "eventId", "userName", "Date"]
+      },
+      "LoginRequest": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "Email of the user"
+          },
+          "password": {
+            "type": "string",
+            "description": "Password of the user"
+          }
+        },
+        "required": ["email", "password"]
+      },
+      "LoginResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "description": "Status of the login request"
+          },
+          "message": {
+            "type": "string",
+            "description": "Message detailing the result of the login request"
+          },
+          "token": {
+            "type": "object",
+            "properties": {
+              "accessToken": {
+                "type": "string",
+                "description": "Access token for the user"
+              },
+              "refreshToken": {
+                "type": "string",
+                "description": "Refresh token for the user"
+              }
+            }
+          }
+        }
+      },
+      "ErrorResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "description": "Error status"
+          },
+          "message": {
+            "type": "string",
+            "description": "Error message"
+          }
+        }
       }
     }
   }
